--- a/Front-end/le-bois-des-pins.html
+++ b/Front-end/le-bois-des-pins.html
@@ -63,8 +63,8 @@
                     <div class="title">ENCLOS 5 - LOUP EUROPÉEN</div>
                 </div>
             </a>
-            <a href="plateau-enclos6.html" class="item">
-                <img src="Public/Le-plateau/daim.jpg" alt="Daim">
+            <a href="bois-des-pins-enclos6.html" class="item">
+                <img src="Public/bois-pins-photo/daim.jpg" alt="Daim">
                 <div class="content">
                     <div class="title">ENCLOS 6 - DAIM</div>
                 </div>
