--- a/Front-end/le-bois-des-pins.html
+++ b/Front-end/le-bois-des-pins.html
@@ -69,8 +69,8 @@
                     <div class="title">ENCLOS 6 - DAIM</div>
                 </div>
             </a>
-            <a href="plateau-enclos7.html" class="item">
-                <img src="Public/Le-plateau/vautour.jpg" alt="Vautour">
+            <a href="bois-des-pins-enclos7.html" class="item">
+                <img src="Public/bois-pins-photo/vautour.jpg" alt="Vautour">
                 <div class="content">
                     <div class="title">ENCLOS 7 - VAUTOUR</div>
                 </div>
