Résolution de problèmes

--- a/Front-end/Decouvrir.html
+++ b/Front-end/Decouvrir.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ISEN'ZOO</title>
+    <title>ISEN'ZOO - Plan du parc</title>
     <link rel="stylesheet" href="decouvrir.css">
 <body>
     <header>
@@ -21,9 +21,9 @@
     <script src="decouvrir.js"></script>
     <main>       
 
-        <img usemap="#europe_map" src="Public/parc-plan.jpeg" alt="Carte du Zoo" />
+        <img usemap="#plan_parcp" src="Public/parc-plan.jpeg" alt="Carte du Zoo" />
           
-        <map name="europe_map">
+        <map name="plan_parc">
             <area
                 shape="poly"
                 coords="1400,78,1345,15,1307,0,1234,0,1186,35,1140,33,1117,83,1026,119,1006,151,819,162,721,212,647,285,627,323,617,366,650,442,677,453,695,468,741,475,776,516,761,572,945,502,948,447,988,429,1019,431,1039,439,1064,469,1115,485,1130,479,1155,462,1271,437,1342,386,1393,335,1428,284,1451,249,1479,231,1501,216,1408,140"
@@ -54,7 +54,7 @@
             <area
                 shape="poly"
                 coords="1836,348,1808,358,1800,383,1788,406,1765,429,1750,485,1745,502,1697,522,1669,558,1664,613,1689,656,1697,702,1735,747,1719,818,1810,879,1842,929,1888,944,1989,936,2136,934,2184,959,2227,949,2267,913,2302,850,2280,749,2330,705,2391,690,2441,700,2520,690,2563,751,2606,746,2666,703,2712,715,2755,700,2805,607,2828,501,2805,412,2765,377,2679,364,2457,407,2286,413,2197,438,2174,390,2076,352,1890,337"
-                href="Les-clairières.html"
+                href="Les-clairieres.html"
                 target="_blank"
                 rel="nofollow noreferrer noopener"
                 alt="Les clarières"
