resolution de probleme

--- a/Front-end/Decouvrir.html
+++ b/Front-end/Decouvrir.html
@@ -21,7 +21,7 @@
     <script src="decouvrir.js"></script>
     <main>       
 
-        <img usemap="#plan_parcp" src="Public/parc-plan.jpeg" alt="Carte du Zoo" />
+        <img usemap="#plan_parc" src="Public/parc-plan.jpeg" alt="Carte du Zoo" />
           
         <map name="plan_parc">
             <area
