--- a/Front-end/Inscription.html
+++ b/Front-end/Inscription.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connexion - Parc Animalier de l'ISEN</title>
-    <link rel="stylesheet" href="inscription.css"> <!-- Nouveau fichier CSS -->
+    <title>ISEN'ZOO - Inscription</title>
+    <link rel="stylesheet" href="inscription.css"> 
 </head>
 <body>
     <div class="background-image">
@@ -13,23 +13,18 @@
 
     <header>
         <nav>
-            <div class="logo">
-                <a href="Accueil.html" style="text-decoration: none;">
-                    <h1>Parc Animalier de l'ISEN</h1>
-                </a>
-            </div>
-            <ul class="nav-links">
-                <li><a href="Decouvrir.html">Découvrir le Parc</a></li>
-                <li><a href="gestion-biomes.html">Nos Animaux</a></li>
-                <li><a href="services.html">Nos Services</a></li>
-                <li><a href="connexion.html">Inscription</a></li>
-            </ul>
+            <a href="decouvrir.html">Découvrir le Parc</a>
+            <a href="gestion-biomes.html">Les biomes</a>
+            <a href="animaux.html">Animaux</a>
+            <a href="services.html">Nos Services</a>
+            <a href="billeterie.html">Billeterie</a>
+            <a href="Connexion.html">Inscription</a>
         </nav>
     </header>
 
     <main>
         <section class="login-section">
-            <h2>Connexion</h2>
+            <h2>Inscription</h2>
             <form action="dashboard.html" method="POST" class="login-form">
                 <div class="form-group">
                     <label for="email">Adresse email</label>
