Ajout des divers services

--- a/Front-end/services.html
+++ b/Front-end/services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,44 +9,87 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
-                <a href="Accueil.html" style="text-decoration: none;">
-                    <h1>Parc Animalier de l'ISEN</h1>
-                </a>
-            </div>
-            <ul class="nav-links">
-                <li><a href="Decouvrir.html">Découvrir le Parc</a></li>
-                <li><a href="gestion-biomes.html">Nos Animaux</a></li>
-                <li><a href="services.html">Nos Services</a></li>
-                <li><a href="connexion.html">Inscription</a></li>
-            </ul>
+            <a href="decouvrir.html">Découvrir le Parc</a>
+            <a href="gestion-biomes.html">Les Biomes</a>
+            <a href="animaux.html">Animaux</a>
+            <a href="services.html">Nos Services</a>
+            <a href="billeterie.html">Billetterie</a>
+            <a href="connexion.html">Connexion</a>
         </nav>
     </header>
 
-    <main>
-        <section>
-            <h2>Nos Services</h2>
-            <ul>
-                <li>Boutique</li>
-                <li>Café Nomad</li>
-                <li>Petit Café</li>
-                <li>Aires de Pique-Nique</li>
-                <li>Toilettes</li>
-                <li>Point d’eau</li>
-                <li>Gare</li>
-                <li>Trajet Train</li>
-                <li>Lodge</li>
-                <li>Tente pédagogique</li>
-                <li>Paillote</li>
-                <li>Plateau des Jeux</li>
-                <li>Espace Pique-nique</li>
-                <li>Point de vue</li>
-            </ul>
-        </section>
-    </main>
+    <div class="hero">
+        <h1>Les Services du Parc</h1>
+    </div>
 
-    <footer>
-        <p>&copy; 2024 Parc Animalier. Tous droits réservés.</p>
-    </footer>
+    <div class="description">
+        <p>
+            Notre parc met à votre disposition une variété de services pour garantir une expérience agréable et confortable. 
+            Découvrez nos boutiques, espaces de détente, options de restauration et bien plus encore !
+        </p>
+    </div>
+
+    <div class="services-container">
+        <div class="service-item">
+            <div class="service-icon">🛍️</div>
+            <div class="service-title">Boutique</div>
+            <div class="service-description">Découvrez des souvenirs uniques.</div>
+        </div>
+        <div class="service-item">
+            <div class="service-icon">🫖</div>
+            <div class="service-title">Café Nomad</div>
+            <div class="service-description">Savourez une boisson chaude ou froide.</div>
+        </div>
+        <div class="service-item">
+            <div class="service-icon">☕</div>
+            <div class="service-title">Petit Café</div>
+            <div class="service-description">Une pause gourmande à tout moment.</div>
+        </div>
+        <div class="service-item">
+            <div class="service-icon">🌳</div>
+            <div class="service-title">Aires de Pique-Nique</div>
+            <div class="service-description">Profitez d’un moment convivial en plein air.</div>
+        </div>
+        <div class="service-item">
+            <div class="service-icon">🚻</div>
+            <div class="service-title">Toilettes</div>
+            <div class="service-description">Des installations accessibles à tout moment.</div>
+        </div>
+        <div class="service-item">
+            <div class="service-icon">🚰</div>
+            <div class="service-title">Point d’eau</div>
+            <div class="service-description">Restez hydraté tout au long de votre visite.</div>
+        </div>
+        <div class="service-item">
+            <div class="service-icon">🚂</div>
+            <div class="service-title">Trajet en Train</div>
+            <div class="service-description">Explorez le parc confortablement.</div>
+        </div>
+        <div class="service-item">
+            <div class="service-icon">🏕️</div>
+            <div class="service-title">Lodge</div>
+            <div class="service-description">Passez une nuit inoubliable au cœur de la nature.</div>
+        </div>
+        <div class="service-item">
+            <div class="service-icon">🎨</div>
+            <div class="service-title">Tente pédagogique</div>
+            <div class="service-description">Apprenez et découvrez en famille.</div>
+        </div>
+        <div class="service-item">
+            <div class="service-icon">🍴</div>
+            <div class="service-title">Paillote</div>
+            <div class="service-description">Détendez-vous dans un cadre unique.</div>
+        </div>
+        <div class="service-item">
+            <div class="service-icon">🎠</div>
+            <div class="service-title">Plateau des Jeux</div>
+            <div class="service-description">Amusez-vous en famille ou entre amis.</div>
+        </div>
+        <div class="service-item">
+            <div class="service-icon">📍</div>
+            <div class="service-title">Point de Vue</div>
+            <div class="service-description">Admirez des panoramas à couper le souffle.</div>
+        </div>
+    </div>
 </body>
 </html>
