--- a/Front-end/Le-plateau.html
+++ b/Front-end/Le-plateau.html
@@ -14,7 +14,7 @@
             <a href="animaux.html">Animaux</a>
             <a href="services.html">Nos Services</a>
             <a href="billeterie.html">Billeterie</a>
-            <a href="Connexion.html">Inscription</a>
+            <a href="Connexion.html">Connexion</a>
         </nav>
     </header>
 
