--- a/Front-end/gestion-biomes.html
+++ b/Front-end/gestion-biomes.html
@@ -8,14 +8,18 @@
 </head>
 <body>
     <header>
-        <nav>
+        <div class="logo">
+            <a href="Accueil.html"><img src="public/logo.png" alt="Logo ISEN'ZOO"></a>
+        </div>
+        <nav class="nav-links">
             <a href="decouvrir.html">Découvrir le Parc</a>
             <a href="gestion-biomes.html">Les biomes</a>
-            <a href="animaux.html">Animaux</a>
             <a href="services.html">Nos Services</a>
             <a href="billeterie.html">Billeterie</a>
-            <a href="Connexion.html">Inscription</a>
         </nav>
+        <div class="login">
+            <a href="Connexion.html">Connexion</a>
+        </div>
     </header>
 
     <div class="carousel">
@@ -26,7 +30,7 @@
                     <div class="author">ISEN'ZOO</div>
                     <div class="title">LES BIOMES</div>
                     <div class="des">
-                    soon
+                        Explorez nos biomes, des habitats recréés comme la savane et les forêts tropicales, offrant une immersion unique pour découvrir la richesse de la faune et de la flore.
                     </div>
                 </div>
             </div>           
@@ -57,7 +61,7 @@
                 </div>
             </a>
             <a href="Le-bois-des-pins.html" class="item">
-                <img src="Public/bois-des-pins.jpg">
+                <img src="Public/bois-pins-photo/loup-europeen.jpg">
                 <div class="content">
                     <div class="title">Le Bois des Pins</div>
                 </div>
