--- a/Front-end/Decouvrir.html
+++ b/Front-end/Decouvrir.html
@@ -5,16 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ISEN'ZOO</title>
     <link rel="stylesheet" href="decouvrir.css">
+</head>
 <body>
     <header>
-        <nav>
-            <a href="Accueil.html">Accueil</a>
+        <div class="logo">
+            <a href="Accueil.html"><img src="public/logo.png" alt="Logo ISEN'ZOO"></a>
+        </div>
+        <nav class="nav-links">
             <a href="decouvrir.html">Découvrir le Parc</a>
             <a href="gestion-biomes.html">Les biomes</a>
             <a href="services.html">Nos Services</a>
             <a href="billeterie.html">Billeterie</a>
-            <a href="Connexion.html">Connexion</a>
         </nav>
+        <div class="login">
+            <a href="Connexion.html">Connexion</a>
+        </div>
     </header>
 
     <script src="Public/imageMapResizer.min.js"></script>
