--- a/Front-end/la-bergerie-des-reptiles.html
+++ b/Front-end/la-bergerie-des-reptiles.html
@@ -8,14 +8,18 @@
 </head>
 <body>
     <header>
-        <nav>
+        <div class="logo">
+            <a href="Accueil.html"><img src="public/logo.png" alt="Logo ISEN'ZOO"></a>
+        </div>
+        <nav class="nav-links">
             <a href="decouvrir.html">Découvrir le Parc</a>
             <a href="gestion-biomes.html">Les biomes</a>
-            <a href="animaux.html">Animaux</a>
             <a href="services.html">Nos Services</a>
             <a href="billeterie.html">Billeterie</a>
-            <a href="Connexion.html">Inscription</a>
         </nav>
+        <div class="login">
+            <a href="Connexion.html">Connexion</a>
+        </div>
     </header>
 
     <div class="carousel">
