connexion/inscription/profil relié a la BDD

--- a/Front-end/Connexion.html
+++ b/Front-end/Connexion.html
@@ -29,7 +29,7 @@
     <main>
         <section class="login-section">
             <h2>Connexion</h2>
-            <form action="dashboard.html" method="POST" class="login-form">
+            <form action="connexion.php" method="POST" class="login-form">
                 <div class="form-group">
                     <label for="email">Adresse email</label>
                     <input type="email" id="email" name="email" placeholder="Votre adresse email" required>
