--- a/Front-end/Inscription.html
+++ b/Front-end/Inscription.html
@@ -29,7 +29,7 @@
     <main>
         <section class="login-section">
             <h2>Inscription</h2>
-            <form action="dashboard.html" method="POST" class="login-form">
+            <form action="inscription.php" method="POST" class="login-form">
                 <div class="form-group">
                     <label for="email">Adresse email</label>
                     <input type="email" id="email" name="email" placeholder="Votre adresse email" required>
@@ -40,7 +40,7 @@
                 </div>
                 <div class="form-group">
                     <label for="password">Mot de passe</label>
-                    <input type="password" id="password" name="password" placeholder="Votre mot de passe" required>
+                    <input type="password" id="password" name="mot_de_passe" placeholder="Votre mot de passe" required>
                 </div>
                 <button type="submit" class="btn">S'inscrire</button>
                 
