--- a/Front-end/Accueil.html
+++ b/Front-end/Accueil.html
@@ -27,7 +27,7 @@
     <div class="carousel">
         <div class="list">
             <div class="item">
-                <img src="public/tigre.mp4" alt="Tigre en immersion">
+                <img src="public/tiger.jpg" alt="Tigre en immersion">
                 <div class="content">
                     <div class="author">ISEN'ZOO</div>
                     <div class="title">EN IMMERSION AVEC ISEN'ZOO</div>
@@ -75,7 +75,7 @@
         </select>
         <select>
             <option value="">Destination...</option>
-            <option value="services">Gare</option>
+            <option value="services">Gare</option>d
             <option value="services">Boutique</option>
             <option value="services">Aire de Pique-Nique</option>
             <option value="services">Café Nomad</option>
