--- a/Front-end/Inscription.html
+++ b/Front-end/Inscription.html
@@ -19,7 +19,7 @@
             <a href="decouvrir.html">Découvrir le Parc</a>
             <a href="gestion-biomes.html">Les biomes</a>
             <a href="services.html">Nos Services</a>
-            <a href="billeterie.html">Billeterie</a>
+            <a href="billeterie.html">Billetterie</a>
         </nav>
         <div class="login">
             <a href="Connexion.html">Connexion</a>
