--- a/Front-end/belvedere-enclosA.html
+++ b/Front-end/belvedere-enclosA.html
@@ -20,7 +20,7 @@
                 <li><a href="gestion-biomes.html">Les biomes</a></li>
                 <li><a href="animaux.html">Animaux</a></li>
                 <li><a href="services.html">Nos Services</a></li>
-                <li><a href="billeterie.html">Billeterie</a></li>
+                <li><a href="billeterie.html">Billetterie</a></li>
             </ul>
         </nav>
     </header>
