--- a/Front-end/bergerie-enclos3.html
+++ b/Front-end/bergerie-enclos3.html
@@ -13,7 +13,7 @@
             <a href="gestion-biomes.html">Les biomes</a>
             <a href="animaux.html">Animaux</a>
             <a href="services.html">Nos Services</a>
-            <a href="billeterie.html">Billeterie</a>
+            <a href="billeterie.html">Billetterie</a>
             <a href="Connexion.html">Inscription</a>
         </nav>
     </header>
