--- a/Front-end/Accueil.html
+++ b/Front-end/Accueil.html
@@ -16,7 +16,7 @@
             <a href="decouvrir.html">Découvrir le Parc</a>
             <a href="gestion-biomes.html">Les biomes</a>
             <a href="services.html">Nos Services</a>
-            <a href="billeterie.html">Billetterie</a>
+            <a href="billeterie.html">Billeterie</a>
         </nav>
         <div class="login">
             <a href="Connexion.html">Connexion</a>
@@ -44,8 +44,20 @@
     <section class="search-section">
         <h2>Recherchez un animal</h2>
         <p>Trouvez rapidement le biome et l'enclos d'un animal spécifique.</p>
-        <input type="text" placeholder="Nom de l'animal...">
-        <button>Rechercher</button>
+        <!-- Formulaire de recherche -->
+        <form action="search.php" method="GET">
+            <input 
+                type="text" 
+                name="animal_name" 
+                placeholder="Nom de l'animal..." 
+                required
+                style="width: 100%; padding: 0.8em; margin-bottom: 1em; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
+            <button 
+                type="submit" 
+                style="background-color: #475429; color: #fff; padding: 0.8em 1.5em; border: none; border-radius: 5px; font-size: 1em; cursor: pointer; transition: background-color 0.3s ease;">
+                Rechercher
+            </button>
+        </form>
     </section>
 
     <!-- Section Navigation -->
