--- a/Front-end/services.html
+++ b/Front-end/services.html
@@ -17,10 +17,11 @@
             <a href="services.html">Nos Services</a>
             <a href="billeterie.html">Billeterie</a>
         </nav>
-        <div class="login">
+        <div id="header-login" class="login">
             <a href="Connexion.html">Connexion</a>
         </div>
     </header>
+    <script src="checkLoginStatus.js"></script>
 
     <div class="hero">
         <h1>Les Services du Parc</h1>
