--- a/Front-end/Decouvrir.html
+++ b/Front-end/Decouvrir.html
@@ -15,13 +15,13 @@
             <a href="decouvrir.html">Découvrir le Parc</a>
             <a href="gestion-biomes.html">Les biomes</a>
             <a href="services.html">Nos Services</a>
-            <a href="billeterie.html">Billetterie</a>
+            <a href="billeterie.html">Billeterie</a>
         </nav>
-        <div class="login">
+        <div id="header-login" class="login">
             <a href="Connexion.html">Connexion</a>
         </div>
     </header>
-
+    <script src="checkLoginStatus.js"></script>
     <script src="Public/imageMapResizer.min.js"></script>
     <script src="decouvrir.js"></script>
 
