--- a/Front-end/billetdate.html
+++ b/Front-end/billetdate.html
@@ -43,4 +43,34 @@
         </form>
     </div>
 </body>
+    <script>
+    const form = document.getElementById('paymentForm');
+
+    form.addEventListener('submit', (e) => {
+        const cardNumber = document.getElementById('cardNumber').value;
+        const expiry = document.getElementById('expiry').value;
+        const cvv = document.getElementById('cvv').value;
+
+        // Vérification simple du numéro de carte
+        if (!/^\d{16}$/.test(cardNumber)) {
+            alert("Veuillez entrer un numéro de carte valide (16 chiffres).");
+            e.preventDefault();
+            return;
+        }
+
+        // Vérification de la date d'expiration
+        if (!/^\d{2}\/\d{2}$/.test(expiry)) {
+            alert("Veuillez entrer une date d'expiration valide (MM/AA).");
+            e.preventDefault();
+            return;
+        }
+
+        // Vérification du CVV
+        if (!/^\d{3}$/.test(cvv)) {
+            alert("Veuillez entrer un CVV valide (3 chiffres).");
+            e.preventDefault();
+            return;
+        }
+    });
+</script>
 </html>
