--- a/Front-end/billeterie.html
+++ b/Front-end/billeterie.html
@@ -61,7 +61,7 @@
                 <p>Tarif enfant<br>De 3 à 12 ans</p>
                 <p style="color: #b03e0f;">Gratuit pour les -3 ans</p>
                 <div class="button-container">
-                    <a href="achat-billet-daté.html" class="button">J'achète mon billet</a>
+                    <a href="billetdate.html" class="button">J'achète mon billet</a>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
                 <p>Tarif enfant<br>De 3 à 12 ans</p>
                 <p style="color: #b03e0f;">Gratuit pour les -3 ans</p>
                 <div class="button-container">
-                    <a href="achat-billet-libre.html" class="button">J'achète mon billet</a>
+                    <a href="billetlibre.html" class="button">J'achète mon billet</a>
                 </div>
             </div>
         </div>
@@ -103,7 +103,7 @@
                 <p>Tarif enfant<br>De 3 à 12 ans</p>
                 <p style="color: #b03e0f;">Gratuit pour les -3 ans</p>
                 <div class="button-container">
-                    <a href="achat-pass-annuel.html" class="button">J'achète mon billet</a>
+                    <a href="billetpass.html" class="button">J'achète mon billet</a>
                 </div>
             </div>
         </div>
