Ajout de commentaires

--- a/Front-end/Accueil.html
+++ b/Front-end/Accueil.html
@@ -122,7 +122,8 @@
         </form>
         <div id="result" class="result"></div>
     </section>
-
+    
+    <!-- Script pour calculer l'itinéraire -->
     <script>
         function calculateRoute() {
             const form = document.getElementById('route-form');
@@ -146,6 +147,5 @@
             });
         }
     </script>
-    <script src="accueil.js"></script>
 </body>
 </html>
