--- a/Front-end/billetlibre.html
+++ b/Front-end/billetlibre.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billet libre</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesht" href="billet.css">
+    <link rel="stylesheet" href="billet.css">
 </head>
 <body>
     <div class="container">
